--- a/style.css
+++ b/style.css
@@ -145,10 +145,10 @@ nav{
 
 
 #second-section{
-    position: relative;
+
     padding-top: 1px;
     width: 100%;
-    
+    position: relative;
     background-color: #D91656;
 }
 
@@ -163,7 +163,7 @@ nav{
 #second-section #search_options input{
     width: 30vw;
     height: 8vh;
-    border-radius: 30px;
+    border-radius: 50px;
     border-style: none;
     font-family: 'Poppins', sans-serif;
     padding:0px 20px;
@@ -177,7 +177,7 @@ nav{
     border-style: none;
     width: 10vw;
     height: 8vh;
-    border-radius: 30px;
+    border-radius: 50px;
     font-family: 'Poppins', sans-serif;
     font-size: 1rem;
     background: linear-gradient(to right, #D91656, black);
@@ -192,22 +192,14 @@ nav{
 #second-section #line-move-down{
     position: absolute;
     top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-#second-section #line-move-down svg{
-    position: absolute;
-    top: 40vh;
     left: 50%;
-    z-index: 2;
-    transform: translateX(-50%);
+    border-left: 2px solid rgb(165, 0, 82);
+    height: 100%;
 }
 
 #second-section #line-move-down i{
     position:absolute;
-    top:36vh;
+    top:0;
     left:50%;
     z-index: 2;
     transform: translate(-50%);
@@ -224,15 +216,17 @@ nav{
     width: 90%;
     margin-inline: auto;
     padding-bottom: 20vh;
+    position: relative;
 }
 
 #second-section #box1{
     width: 40vw;
-    height: 45vh;
     background-color: black;
     border-radius: 10px;
     position: relative;
     box-shadow: rgba(0, 0, 0, 0.651) 0px 7px 29px 0px;
+    padding-bottom: 10vh;
+    padding-bottom: 10vh;
 }
 #second-section #box1 img:first-child{
     width: 100px;
